Fixing page number spacing

--- a/src/css/blog.sass
+++ b/src/css/blog.sass
@@ -11,7 +11,7 @@
             +transition-property(border-bottom)
             +transition-duration(0.35s)
             @extend p
-            display: inline
+            display: inline-block
             color: $tag-color
             margin-left: 4px
             padding-left: 4px
